--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,7 +1,7 @@
 
-upstream django {
-    server django:8000;
-}
+# upstream django {
+#     server django:8000;
+# }
 
 server {
     listen 80;
@@ -25,12 +25,3 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
     }
 }
-
-
-# server {
-#     listen 80;
-#     server_name localhost 0.0.0.0;
-
-#     # Redirect HTTP to HTTPS
-#     return 301 https://$host$request_uri;
-# }
