--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
   postgres:
     container_name: postgres_container
     image: postgres:latest
-    environment: 
+    env_file: 
       - ./.env   # Load environment variables from .env file
     ports:
       - "5432:5432"
@@ -27,7 +27,7 @@ services:
       - ./backend:/app  # Mount backend folder into the container
     depends_on:
       - postgres  # Ensure Django waits for PostgreSQL to be ready
-    environment: 
+    env_file: 
       - ./.env    # Load environment variables from .env file
 
   nginx:
