fix: build the registration
changes:
	- fixing the registration
	- optimize the backend dockerfile to do some stuff as migration, migrate, and check the superuser each tim>
	- set the static and template folders
	- add some files in static folder and HTML pages in the template to check their functionality
	- optimize the makefile
	- set the admin endpoint to check the db
and some optimization...

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -15,5 +15,4 @@ RUN pip install --no-cache-dir -r requirements.txt
 COPY . /app/
 # Expose the port on which Django will run
 EXPOSE 8000
-# Run the Django development server when the container starts
-CMD ["python", "myproject/manage.py", "runserver", "0.0.0.0:8000"]
+ENTRYPOINT [ "sh", "execute_django.sh" ]
