--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -7,5 +7,7 @@ psycopg2-binary==2.9.9
 PyJWT==2.10.1
 sqlparse==0.5.3
 typing_extensions==4.12.2
-channels
-channels-redis
+channels==4.2.0
+channels-redis==4.2.1
+daphne==4.1.2
+Pillow==11.0.0
