--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,8 +31,7 @@ services:
       - ./.env    # Load environment variables from .env file
   
   cadvisor:
-    container_name: cadvisor_container
-    image: gcr.io/cadvisor/cadvisor:v0.47.0
+    image: google/cadvisor:latest
     ports:
       - "8081:8080"
     volumes:
