--- a/prometheus.yml
+++ b/prometheus.yml
@@ -6,6 +6,8 @@ scrape_configs:
     static_configs:
       - targets: ["localhost:9090"]
 
-  - job_name: "cadvisor"
+  - job_name: cadvisor
+    metrics_path: /metrics
     static_configs:
-      - targets: ["localhost:8081"]
+      - targets: ['cadvisor_container:8080']
+
