fix: fix the name of 'targets' directive value of cadvisor in prometheus yaml file to the correct name of the cadvisor in the main yaml file.

--- a/prometheus.yml
+++ b/prometheus.yml
@@ -9,5 +9,5 @@ scrape_configs:
   - job_name: cadvisor
     metrics_path: /metrics
     static_configs:
-      - targets: ['cadvisor_container:8080']
+      - targets: ['transcendence-cadvisor-1:8080']
 
