feat: add the 2FA functionality with Methods of SMS, Email, Authentication APP.
	- add 2FA checkbox and selected Method items in Profile Models.
	- use the 'pytop' library to generate/validaiton the TOTP.
	- use the 'qrcode' library to generate QR codes.
	- use the 'twilio' library to send SMS.
	- use the 'django.core.mail' library to send Email.
	- implementation of caching OTP codes for SMS and email methods.
	- implemente 'select-2fa-method' and 'verify-2fa-setup' APIs to activating and validation of the 2FA feature.
	- optimize 'login' API to check the 2FA method.
	- add activation/selecting/verifying 2FA in profile part of the frontend.
	- add checking/receiving/verifying 2FA in login part of the frontend.

--- a/backend/Django_Docker_files/requirements.txt
+++ b/backend/Django_Docker_files/requirements.txt
@@ -11,4 +11,8 @@ channels==4.2.0
 channels-redis==4.2.1
 daphne==4.1.2
 Pillow==11.0.0
-django-debug-toolbar
+django-debug-toolbar==5.0.1
+django-otp
+qrcode 
+pyotp  #Python library for TOTP generation and validation
+twilio  #Python library for sending SMS
