--- a/backend/Django_Docker_files/requirements.txt
+++ b/backend/Django_Docker_files/requirements.txt
@@ -12,7 +12,7 @@ channels-redis==4.2.1
 daphne==4.1.2
 Pillow==11.0.0
 django-debug-toolbar==5.0.1
-django-otp
-qrcode 
-pyotp  #Python library for TOTP generation and validation
-twilio  #Python library for sending SMS
+django-otp==1.5.4
+qrcode==8.0 #Python library for generating QR codes
+pyotp==2.9.0  #Python library for TOTP generation and validation
+twilio==9.4.3  #Python library for sending SMS
