--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,8 +1,3 @@
-
-# upstream django {
-#     server django:8000;
-# }
-
 server {
     listen 80;
 
@@ -10,10 +5,12 @@ server {
     location / {
         root /usr/share/nginx/html;
         index index.html;
+        try_files $uri /index.html;
     }
+
     # Serve Django static files
     location /static/ {
-        alias /usr/share/nginx/static/;  # Directory where collected static files are placed
+        alias /usr/share/nginx/static/;
     }
 
     # Reverse proxy to Django backend for API requests
