--- a/.env
+++ b/.env
@@ -11,6 +11,9 @@ DB_PASSWORD=postgres
 DB_HOST=postgres
 DB_PORT=5432
 
+GF_SECURITY_ADMIN_USER=admin
+GF_SECURITY_ADMIN_PASSWORD=admin
+
 # Django settings
 DEBUG=1
 SECRET_KEY=your-secret-key
