--- a/docker compose.yml
+++ b/docker compose.yml
@@ -55,11 +55,10 @@ services:
   # grafana:
   #   container_name: grafana_container
   #   image: grafana/grafana:latest
+  #   env_file: 
+  #     - ./.env
   #   ports:
   #     - "3000:3000"
-  #   environment:
-  #     - GF_SECURITY_ADMIN_USER=admin
-  #     - GF_SECURITY_ADMIN_PASSWORD=admin
   #   volumes:
   #     - grafana-data:/var/lib/grafana
 
