--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,36 +32,36 @@ services:
     stdin_open: true # Keep stdin open, so we can attach to the container for debugging with dpd in the django
     tty: true 
   
-  cadvisor:
-    image: gcr.io/cadvisor/cadvisor:latest
-    ports:
-      - "8081:8080"
-    volumes:
-      - /:/rootfs:ro
-      - /var/run/docker.sock:/var/run/docker.sock:ro
-    restart: always
+  # cadvisor:
+  #   image: gcr.io/cadvisor/cadvisor:latest
+  #   ports:
+  #     - "8081:8080"
+  #   volumes:
+  #     - /:/rootfs:ro
+  #     - /var/run/docker.sock:/var/run/docker.sock:ro
+  #   restart: always
 
 
-  prometheus:
-    container_name: prometheus_container
-    image: prom/prometheus:latest
-    volumes:
-      - ./prometheus.yml:/etc/prometheus/prometheus.yml
-    ports:
-      - "9090:9090"
-    depends_on:
-      - cadvisor
-    restart: always
+  # prometheus:
+  #   container_name: prometheus_container
+  #   image: prom/prometheus:latest
+  #   volumes:
+  #     - ./prometheus.yml:/etc/prometheus/prometheus.yml
+  #   ports:
+  #     - "9090:9090"
+  #   depends_on:
+  #     - cadvisor
+  #   restart: always
 
-  grafana:
-    container_name: grafana_container
-    image: grafana/grafana:latest
-    ports:
-      - "3000:3000"
-    env_file:
-      - ./.env
-    volumes:
-      - grafana-data:/var/lib/grafana
+  # grafana:
+  #   container_name: grafana_container
+  #   image: grafana/grafana:latest
+  #   ports:
+  #     - "3000:3000"
+  #   env_file:
+  #     - ./.env
+  #   volumes:
+  #     - grafana-data:/var/lib/grafana
 
   redis:
     container_name: redis_container
