--- a/.env
+++ b/.env
@@ -15,3 +15,5 @@ DB_PORT=5432
 DEBUG=1
 SECRET_KEY=your-secret-key
 ALLOWED_HOSTS=localhost
+
+# DJANGO_SETTINGS_MODULE=Django_backend_project.settings.settings
