--- a/docker compose.yml
+++ b/docker compose.yml
@@ -45,7 +45,7 @@ services:
     container_name: prometheus_container
     image: prom/prometheus:latest
     volumes:
-      - ./prometheus.yml:/etc/prometheus/prometheus.yml
+      - .prometheus/prometheus.yml:/etc/prometheus/prometheus.yml
     ports:
       - "9090:9090"
     depends_on:
