--- a/prometheus/service_alerts.yml
+++ b/prometheus/service_alerts.yml
@@ -1,4 +1,15 @@
 groups:
+
+  - name: example
+    rules:
+      - alert: InstanceDown
+        expr: up == 0
+        for: 5m
+        labels:
+          severity: critical
+        annotations:
+          summary: "Instance {{ $labels.instance }} is down"
+
   - name: test_alert
     rules:
       - alert: TestAlert
@@ -24,6 +35,7 @@ groups:
           description: >
             CPU usage has been above 80% for the last 3 minutes.
             Please investigate the container: {{ $labels.container }} 🧯!
+
 
   - name: container_memory_alert
     rules:
