--- a/prometheus/prometheus.yml
+++ b/prometheus/prometheus.yml
@@ -1,7 +1,14 @@
 global:
   scrape_interval: 15s  # How often Prometheus scrapes metrics
+  scrape_timeout: 10s
+  evaluation_interval: 15s
 rule_files:
-  - "service_rules.yml"
+  - "first_rules.yml"
+alerting:
+  alertmanagers:
+    - static_configs:
+        - targets: ['alertmanager:9093']
+
 scrape_configs:
   - job_name: "prometheus"
     static_configs:
@@ -12,7 +19,3 @@ scrape_configs:
     static_configs:
       - targets: ['cadvisor_container:8080']
 
-alerting:
-  alertmanagers:
-    - static_configs:
-        - targets: ['localhost:9093']
