--- a/provisioning/alertmanager/alertmanager.yml
+++ b/provisioning/alertmanager/alertmanager.yml
@@ -13,7 +13,7 @@ receivers:
         from: "transcendence.42institute@gmail.com"  # From email address
         smarthost: "smtp.gmail.com:587"  # Gmail SMTP server
         auth_username: "transcendence.42institute@gmail.com"  # Your email address for authentication
-        auth_password: "Tr@nscendence@42"  # Your email password (preferably use environment variables for this)
+        auth_password: "qdsy ejxp yagj ptyq"  # Your email password (preferably use environment variables for this)
         auth_identity: "transcendence.42institute@gmail.com"  # Identity for SMTP authentication
         tls_config:
           insecure_skip_verify: false  # Set to true if you want to skip TLS verification
