--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -74,6 +74,51 @@ services:
   #   volumes:
   #     - grafana-data:/var/lib/grafana
 
+  prometheus:
+    image: prom/prometheus:latest
+    container_name: prometheus
+    ports:
+      - 9090:9090
+    volumes:
+      - ./prometheus.yml:/etc/prometheus/prometheus.yml
+      - prometheus_data:/prometheus
+    command:
+      - '--config.file=/etc/prometheus/prometheus.yml'
+    depends_on:
+      - cadvisor
+
+  cadvisor:
+    image: gcr.io/cadvisor/cadvisor:latest
+    container_name: cadvisor
+    ports:
+      - 8080:8080
+    volumes:
+      - /:/rootfs:ro
+      - /var/run:/var/run:rw
+      - /sys:/sys:ro
+      - /var/lib/docker/:/var/lib/docker:ro
+    depends_on:
+      - django
+      - postgres
+      - redis
+      - nginx
+      - setup
+      - elasticsearch
+      - logstash
+      - kibana
+
+  grafana:
+    image: grafana/grafana:latest
+    container_name: grafana
+    ports:
+      - 3000:3000
+    volumes:
+      - grafana_data:/var/lib/grafana
+    depends_on:
+      - prometheus
+
+
+
   redis:
     container_name: redis_container
     image: redis:6
@@ -174,13 +219,16 @@ services:
 volumes:
   static_files:  # Define named volume for static files
   database:  # Define named volume for PostgreSQL persistence
-  grafana-data:  # Define named volume for Grafana persistence
   certs:
     name: certs
   elasticsearch:
     name: elasticsearch
   kibana:
     name: kibana
+  prometheus_data:
+    name: prometheus_data
+  grafana_data:
+    name: grafana_data
 
 networks:
   elk-stack:
