--- a/prometheus.yml
+++ b/prometheus.yml
@@ -1,18 +1,34 @@
 global:
-  scrape_interval: 15s  # How often Prometheus scrapes metrics
-rule_files:
-  - "alert.rules.yml"
+  scrape_interval: 15s
+  evaluation_interval: 15s
+
 scrape_configs:
-  - job_name: "prometheus"
-    static_configs:
-      - targets: ["localhost:9090"]
+- job_name: cadvisor
+  scrape_interval: 5s
+  static_configs:
+  - targets:
+    - cadvisor:8080
 
-  - job_name: cadvisor
-    metrics_path: /metrics
-    static_configs:
-      - targets: ['ft_transcendence_cadvisor_1:8080']
 
-alerting:
-  alertmanagers:
-    - static_configs:
-        - targets: ['localhost:9093']
+
+
+
+
+# global:
+#   scrape_interval: 15s  # How often Prometheus scrapes metrics
+# rule_files:
+#   - "alert.rules.yml"
+# scrape_configs:
+#   - job_name: "prometheus"
+#     static_configs:
+#       - targets: ["localhost:9090"]
+
+#   - job_name: cadvisor
+#     metrics_path: /metrics
+#     static_configs:
+#       - targets: ['ft_transcendence_cadvisor_1:8080']
+
+# alerting:
+#   alertmanagers:
+#     - static_configs:
+#         - targets: ['localhost:9093']
