--- a/nginx/conf/default.conf
+++ b/nginx/conf/default.conf
@@ -74,16 +74,29 @@ server {
     }
 
     # it use the runserver for websocket connection to make simplify the development environment
-    location /ws/ {
-        proxy_pass http://django:8000;
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection "Upgrade";
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-		proxy_set_header Cookie $http_cookie;
-    }
+    # location /ws/ {
+    #     proxy_pass http://django:8000;
+    #     proxy_http_version 1.1;
+    #     proxy_set_header Upgrade $http_upgrade;
+    #     proxy_set_header Connection "Upgrade";
+    #     proxy_set_header Host $host;
+    #     proxy_set_header X-Real-IP $remote_addr;
+    #     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+	# 	proxy_set_header Cookie $http_cookie;
+    # }
+
+	location /ws/ {
+		proxy_pass http://django:8000;
+		proxy_http_version 1.1;
+		proxy_set_header Upgrade $http_upgrade;
+		proxy_set_header Connection "Upgrade";
+		proxy_set_header Host $host;
+		proxy_set_header X-Real-IP $remote_addr;
+		proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+		proxy_redirect off;
+		proxy_cache_bypass $http_upgrade;
+	}
+
 
     # it use Daphne server for secure websocket connection
     location /wss/ {
