--- a/nginx/conf/default.conf
+++ b/nginx/conf/default.conf
@@ -24,28 +24,14 @@ server {
 		proxy_set_header Cookie $http_cookie;
     }
 
-	# location /auth/api/42/callback/ {
-	# 	proxy_pass http://django:8000;
-	# 	proxy_set_header Host $host;
-	# 	proxy_set_header X-Real-IP $remote_addr;
-	# 	proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-	# 	proxy_set_header X-Forwarded-Proto https;
-	# 	proxy_set_header Cookie $http_cookie;
-	# }
-
-
-	# location /auth/ {
-	# 	proxy_pass http://django:8000;
-	# 	proxy_ssl_server_name on;
-
-	# 	proxy_set_header Host $host;  # Use the original host
-	# 	proxy_set_header X-Real-IP $remote_addr;
-	# 	proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-	# 	proxy_set_header X-Forwarded-Proto $scheme;  # Use $scheme instead of hardcoding "https"
-	# 	proxy_set_header Cookie $http_cookie;  # Forward cookies
-
-	# 	proxy_ssl_verify off;  # Only for testing; enable SSL verification in production
-	# }
+	location /auth/api/42/callback/ {
+		proxy_pass http://django:8000;
+		proxy_set_header Host $host;
+		proxy_set_header X-Real-IP $remote_addr;
+		proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+		proxy_set_header X-Forwarded-Proto https;
+		proxy_set_header Cookie $http_cookie;
+	}
 
     location /admin/ {
         proxy_pass http://django:8000;
