--- a/.env
+++ b/.env
@@ -18,7 +18,7 @@ GF_SECURITY_ADMIN_PASSWORD=admin
 ADMIN_USER=admin
 ADMIN_PWD=adminpassword
 ADMIN_EMAIL=admin@admin.com
-DJANGO_DEBUG=true
+DJANGO_DEBUG=false
 DJANGO_SECRET_KEY='django-insecure-*o&k&v7w7&9^242!1$^e#v&27)@0ltyiwx=rxz#0(^yk=h3=l_'
 DJANGO_ALLOWED_HOSTS=0.0.0.0,localhost,django,127.0.0.1,192.168.0.206,192.168.0.135
 PYTHONPATH=/app:/app/Django_backend_project
