--- a/nginx/conf/default.conf
+++ b/nginx/conf/default.conf
@@ -1,6 +1,6 @@
 server {
     listen 443 ssl;
-    server_name _;
+    server_name localhost;
 
     ssl_certificate /etc/nginx/ssl/nginx.crt;
     ssl_certificate_key /etc/nginx/ssl/nginx.key;
