--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -43,50 +43,50 @@ services:
     stdin_open: true # Keep stdin open, so we can attach to the container for debugging with dpd in the django
     tty: true 
 
-  prometheus:
-    image: prom/prometheus:latest
-    container_name: prometheus
-    ports:
-      - 9090:9090
-    volumes:
-      - ./prometheus.yml:/etc/prometheus/prometheus.yml
-      - prometheus_data:/prometheus
-    command:
-      - '--config.file=/etc/prometheus/prometheus.yml'
-    depends_on:
-      - cadvisor
+  # prometheus:
+  #   image: prom/prometheus:latest
+  #   container_name: prometheus
+  #   ports:
+  #     - 9090:9090
+  #   volumes:
+  #     - ./prometheus.yml:/etc/prometheus/prometheus.yml
+  #     - prometheus_data:/prometheus
+  #   command:
+  #     - '--config.file=/etc/prometheus/prometheus.yml'
+  #   depends_on:
+  #     - cadvisor
 
-  cadvisor:
-    image: gcr.io/cadvisor/cadvisor:latest
-    container_name: cadvisor
-    ports:
-      - 8080:8080
-    volumes:
-      - /:/rootfs:ro
-      - /var/run:/var/run:rw
-      - /sys:/sys:ro
-      - /var/lib/docker/:/var/lib/docker:ro
-    depends_on:
-      - django
-      - postgres
-      - redis
-      - nginx
-      - setup
-      - elasticsearch
-      - logstash
-      - kibana
+  # cadvisor:
+  #   image: gcr.io/cadvisor/cadvisor:latest
+  #   container_name: cadvisor
+  #   ports:
+  #     - 8080:8080
+  #   volumes:
+  #     - /:/rootfs:ro
+  #     - /var/run:/var/run:rw
+  #     - /sys:/sys:ro
+  #     - /var/lib/docker/:/var/lib/docker:ro
+  #   depends_on:
+  #     - django
+  #     - postgres
+  #     - redis
+  #     - nginx
+  #     - setup
+  #     - elasticsearch
+  #     - logstash
+  #     - kibana
 
-  grafana:
-    image: grafana/grafana:latest
-    container_name: grafana
-    ports:
-      - 3000:3000
-    volumes:
-      - grafana_data:/var/lib/grafana
-      - ./grafana/provisioning/datasources:/etc/grafana/provisioning/datasources
-      - ./grafana/provisioning/dashboards:/etc/grafana/provisioning/dashboards
-    depends_on:
-      - prometheus
+  # grafana:
+  #   image: grafana/grafana:latest
+  #   container_name: grafana
+  #   ports:
+  #     - 3000:3000
+  #   volumes:
+  #     - grafana_data:/var/lib/grafana
+  #     - ./grafana/provisioning/datasources:/etc/grafana/provisioning/datasources
+  #     - ./grafana/provisioning/dashboards:/etc/grafana/provisioning/dashboards
+  #   depends_on:
+  #     - prometheus
 
 
 
@@ -115,76 +115,76 @@ services:
     networks:
       - webnet
 
-  setup:
-    container_name: setup
-    build: ./ELK/setup
-    volumes:
-      - certs:/usr/share/elasticsearch/config/certs
-      - /var/run/docker.sock:/var/run/docker.sock
-    env_file:
-      - .env
-    networks:
-      - elk-stack
-    healthcheck:
-      test: ['CMD-SHELL', '[ -f /usr/share/elasticsearch/config/certs/elasticsearch/elasticsearch.crt ]']
-      interval: 1s
-      timeout: 5s
-      retries: 120
+  # setup:
+  #   container_name: setup
+  #   build: ./ELK/setup
+  #   volumes:
+  #     - certs:/usr/share/elasticsearch/config/certs
+  #     - /var/run/docker.sock:/var/run/docker.sock
+  #   env_file:
+  #     - .env
+  #   networks:
+  #     - elk-stack
+  #   healthcheck:
+  #     test: ['CMD-SHELL', '[ -f /usr/share/elasticsearch/config/certs/elasticsearch/elasticsearch.crt ]']
+  #     interval: 1s
+  #     timeout: 5s
+  #     retries: 120
 
-  elasticsearch:
-    container_name: elasticsearch
-    depends_on:
-      setup:
-        condition: service_healthy
-    build: ./ELK/elasticsearch
-    restart: always
-    volumes:
-      - certs:/usr/share/elasticsearch/config/certs
-      - elasticsearch:/usr/share/elasticsearch/data
-    ports:
-      - '9200:9200'
-    env_file:
-      - .env
-    networks:
-      - elk-stack
-    mem_limit: ${MEM_LIMIT}
-    ulimits:
-      memlock:
-        soft: -1
-        hard: -1
+  # elasticsearch:
+  #   container_name: elasticsearch
+  #   depends_on:
+  #     setup:
+  #       condition: service_healthy
+  #   build: ./ELK/elasticsearch
+  #   restart: always
+  #   volumes:
+  #     - certs:/usr/share/elasticsearch/config/certs
+  #     - elasticsearch:/usr/share/elasticsearch/data
+  #   ports:
+  #     - '9200:9200'
+  #   env_file:
+  #     - .env
+  #   networks:
+  #     - elk-stack
+  #   mem_limit: ${MEM_LIMIT}
+  #   ulimits:
+  #     memlock:
+  #       soft: -1
+  #       hard: -1
 
-  logstash:
-    container_name: logstash
-    depends_on:
-      setup:
-        condition: service_healthy
-    build: ./ELK/logstash
-    restart: always
-    volumes:
-      - certs:/usr/share/logstash/config/certs
-      - ./ELK/logstash/conf/access.log:/usr/share/logstash/nginx/access.log
-    env_file:
-      - .env
-    networks:
-      - elk-stack
+  # logstash:
+  #   container_name: logstash
+  #   depends_on:
+  #     setup:
+  #       condition: service_healthy
+  #   build: ./ELK/logstash
+  #   restart: always
+  #   volumes:
+  #     - certs:/usr/share/logstash/config/certs
+  #     - ./ELK/logstash/conf/access.log:/usr/share/logstash/nginx/access.log
+  #   env_file:
+  #     - .env
+  #   networks:
+  #     - elk-stack
 
-  kibana:
-    container_name: kibana
-    depends_on:
-      setup:
-        condition: service_healthy
-    build: ./ELK/kibana
-    restart: always
-    volumes:
-      - certs:/usr/share/kibana/config/certs
-      - kibana:/usr/share/kibana/data
-    ports:
-      - '5601:5601'
-    env_file:
-      - .env
-    networks:
-      - elk-stack
-    mem_limit: ${MEM_LIMIT}
+  # kibana:
+  #   container_name: kibana
+  #   depends_on:
+  #     setup:
+  #       condition: service_healthy
+  #   build: ./ELK/kibana
+  #   restart: always
+  #   volumes:
+  #     - certs:/usr/share/kibana/config/certs
+  #     - kibana:/usr/share/kibana/data
+  #   ports:
+  #     - '5601:5601'
+  #   env_file:
+  #     - .env
+  #   networks:
+  #     - elk-stack
+  #   mem_limit: ${MEM_LIMIT}
 
 
 volumes:
@@ -192,14 +192,14 @@ volumes:
   database:  # Define named volume for PostgreSQL persistence
   certs:
     name: certs
-  elasticsearch:
-    name: elasticsearch
-  kibana:
-    name: kibana
-  prometheus_data:
-    name: prometheus_data
-  grafana_data:
-    name: grafana_data
+  # elasticsearch:
+  #   name: elasticsearch
+  # kibana:
+  #   name: kibana
+  # prometheus_data:
+  #   name: prometheus_data
+  # grafana_data:
+  #   name: grafana_data
 
 networks:
   elk-stack:
