--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -86,6 +86,9 @@ services:
       - grafana_data:/var/lib/grafana
       - ./grafana/provisioning/datasources:/etc/grafana/provisioning/datasources
       - ./grafana/provisioning/dashboards:/etc/grafana/provisioning/dashboards
+      - ./grafana/provisioning/alerting:/etc/grafana/provisioning/alerting
+
+
     depends_on:
       - prometheus
 
