--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,8 +7,10 @@ services:
     image: postgres:latest
     env_file: 
       - ./.env   # Load environment variables from .env file
-    ports:
-      - "5432:5432"
+    # ports:
+    #   - "5432:5432"
+    expose:
+      - 5432
     volumes:
       - database:/var/lib/postgresql/data  # Use named volume for persistence
     # healthcheck:
@@ -25,8 +27,6 @@ services:
     build: ./backend/Django_Docker_files/
     environment:
        - DJANGO_SETTINGS_MODULE=Django_backend_project.settings.settings
-    # ports:
-    #   - "8000:8000"
     expose:
       - 8000
     volumes:
@@ -46,8 +46,8 @@ services:
   prometheus:
     image: prom/prometheus:latest
     container_name: prometheus
-    ports:
-      - 9090:9090
+    expose:
+      - 9090
     volumes:
       - ./prometheus.yml:/etc/prometheus/prometheus.yml
       - prometheus_data:/prometheus
@@ -55,12 +55,14 @@ services:
       - '--config.file=/etc/prometheus/prometheus.yml'
     depends_on:
       - cadvisor
+    networks:
+      - webnet
 
   cadvisor:
     image: gcr.io/cadvisor/cadvisor:latest
     container_name: cadvisor
-    ports:
-      - 8080:8080
+    expose:
+      - 8080
     volumes:
       - /:/rootfs:ro
       - /var/run:/var/run:rw
@@ -75,6 +77,8 @@ services:
       - elasticsearch
       - logstash
       - kibana
+    networks:
+      - webnet
 
   grafana:
     # image: grafana/grafana:latest
@@ -82,13 +86,15 @@ services:
     build: ./grafana/
     ports:
       - 3000:3000
+    env_file:
+      - ./.env
     volumes:
       - grafana_data:/var/lib/grafana
       - ./grafana/provisioning/datasources:/etc/grafana/provisioning/datasources
       - ./grafana/provisioning/dashboards:/etc/grafana/provisioning/dashboards
       - ./grafana/provisioning/alerting:/etc/grafana/provisioning/alerting
-
-
+    networks:
+      - webnet
     depends_on:
       - prometheus
 
@@ -97,8 +103,8 @@ services:
   redis:
     container_name: redis_container
     image: redis:6
-    ports:
-      - "6379:6379"
+    expose:
+      - 6379
     networks:
       - webnet
 
